Add MessageFormat test items

--- a/src/test/resources/messages/messages_de.properties
+++ b/src/test/resources/messages/messages_de.properties
@@ -2,3 +2,4 @@ payment.headline=Payment (de)
 messages.headline=Headline (de)
 payment.text=Payment Text (de)
 messages.text=Text (de)
+messages.messageformat=Es gibt {0,choice,0#keine Datei|1#eine Datei|1<{0,number,integer} Dateien}.
