--- a/src/test/resources/messages/messages.properties
+++ b/src/test/resources/messages/messages.properties
@@ -4,3 +4,4 @@ payment.text=Payment Text (en)
 messages.text=Text (en)
 messages.notice=Notice (en)
 test.hallo=World
+messages.messageformat=There {0,choice,0#are no files|1#is one file|1<are {0,number,integer} files}.
